--- a/composer.json
+++ b/composer.json
@@ -25,17 +25,13 @@
 		"phpunit/phpunit": "^7.5"
 	},
 	"autoload": {
-		"classmap": [
-			"src",
-			"src/Exceptions"
-		],
 		"psr-4": {
-			"joelwmale\\RSSFeedPHP\\": "src"
+			"RSSFeedPHP\\": "src/RSSFeedPHP/"
 		}
 	},
 	"autoload-dev": { 
 		"psr-4": {
-			"joelwmale\\RSSFeedPHP\\Tests\\": "tests"
+			"Tests\\": "tests/"
 		}
 	},
 	"scripts": {
