Namespacing now requires joelwmale/RSSFeedPHP

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"RSSFeedPHP\\": "src/RSSFeedPHP/"
+			"joelwmale\\": "src/RSSFeedPHP/"
 		}
 	},
 	"autoload-dev": { 
